--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2532,4 +2532,7 @@
   <data name="Model" xml:space="preserve">
     <value>Model</value>
   </data>
+  <data name="Online" xml:space="preserve">
+    <value>Online</value>
+  </data>
 </root>
