--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2523,4 +2523,16 @@
   <data name="ExportLicenseFailed" xml:space="preserve">
     <value>Экспорт лицензии не удался</value>
   </data>
+  <data name="Customer" xml:space="preserve">
+    <value>Клиент</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>тип</value>
+  </data>
+  <data name="Model" xml:space="preserve">
+    <value>Модель</value>
+  </data>
+  <data name="Online" xml:space="preserve">
+    <value>Онлайн</value>
+  </data>
 </root>
