--- a/UI/ColorVision.UI.Desktop/Properties/Resources.en.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.en.resx
@@ -127,7 +127,7 @@
     <value>Save configuration</value>
   </data>
   <data name="OpenConfigFolder" xml:space="preserve">
-    <value>Open the configuration folder</value>
+    <value>OpenConfigFolder</value>
   </data>
   <data name="SetupWizard" xml:space="preserve">
     <value>Configuration wizard</value>
@@ -146,5 +146,473 @@
   </data>
   <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
     <value>There are still some incomplete configurations. Do you want to skip them?</value>
+  </data>
+  <data name="ExportSettings" xml:space="preserve">
+    <value>ExportSettings</value>
+  </data>
+  <data name="ImportExportSettings" xml:space="preserve">
+    <value>ImportExportSettings</value>
+  </data>
+  <data name="ImportSettings" xml:space="preserve">
+    <value>ImportSettings</value>
+  </data>
+  <data name="OpenStore" xml:space="preserve">
+    <value>OpenStore</value>
+  </data>
+  <data name="InstallPackage" xml:space="preserve">
+    <value>InstallPackage</value>
+  </data>
+  <data name="OpenViewDllViersion" xml:space="preserve">
+    <value>OpenViewDllViersion</value>
+  </data>
+  <data name="Restart" xml:space="preserve">
+    <value>Restart</value>
+  </data>
+  <data name="UpdateAll" xml:space="preserve">
+    <value>UpdateAll</value>
+  </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>PluginManagerWindow</value>
+  </data>
+  <data name="SelectExtractFolder" xml:space="preserve">
+    <value>Select target folder to extract plugin</value>
+  </data>
+  <data name="ExtractPlugin" xml:space="preserve">
+    <value>Extract Plugin</value>
+  </data>
+  <data name="PluginExtractSuccess" xml:space="preserve">
+    <value>Plugin extracted successfully to: {0}</value>
+  </data>
+  <data name="PluginExtractFailed" xml:space="preserve">
+    <value>Plugin extraction failed</value>
+  </data>
+  <data name="Install" xml:space="preserve">
+    <value>Install</value>
+  </data>
+  <data name="SortByColumn" xml:space="preserve">
+    <value>Sort by {0}</value>
+  </data>
+  <data name="zh-Hant" xml:space="preserve">
+    <value>繁體中文 (Traditional Chinese)</value>
+  </data>
+  <data name="zh-Hans" xml:space="preserve">
+    <value>简体中文 (Simplified Chinese)</value>
+  </data>
+  <data name="WriteConfigFileFailed" xml:space="preserve">
+    <value>Failed to write configuration file {0}</value>
+  </data>
+  <data name="WindowSingle" xml:space="preserve">
+    <value>Independent</value>
+  </data>
+  <data name="WindowHidden" xml:space="preserve">
+    <value>Hide</value>
+  </data>
+  <data name="ViewMode9" xml:space="preserve">
+    <value>View Mode 9</value>
+  </data>
+  <data name="ViewMode4" xml:space="preserve">
+    <value>View Mode 4</value>
+  </data>
+  <data name="ViewMode2" xml:space="preserve">
+    <value>View Mode 2</value>
+  </data>
+  <data name="ViewMode1" xml:space="preserve">
+    <value>View Mode 1</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
+  </data>
+  <data name="UseSystem" xml:space="preserve">
+    <value>UseSystem</value>
+  </data>
+  <data name="UpdateLog4NetLevel" xml:space="preserve">
+    <value>Updating Log4Net log level:</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="UnsupportedFileFormat" xml:space="preserve">
+    <value>Unsupported file format</value>
+  </data>
+  <data name="TimeLeft" xml:space="preserve">
+    <value>Time Left:</value>
+  </data>
+  <data name="SortOptions" xml:space="preserve">
+    <value>Sort Options</value>
+  </data>
+  <data name="SortDefault" xml:space="preserve">
+    <value>SortDefault</value>
+  </data>
+  <data name="SortByName" xml:space="preserve">
+    <value>SortByName</value>
+  </data>
+  <data name="SortByCategory" xml:space="preserve">
+    <value>SortByCategory</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>Socket Management Window</value>
+  </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>SocketBufferSize</value>
+  </data>
+  <data name="SmartSortDescending" xml:space="preserve">
+    <value>Smart Sort (Descending)</value>
+  </data>
+  <data name="SmartSortAscending" xml:space="preserve">
+    <value>Smart Sort (Ascending)</value>
+  </data>
+  <data name="SaveSingleConfigFailed" xml:space="preserve">
+    <value>Failed to save single configuration {0}</value>
+  </data>
+  <data name="ru" xml:space="preserve">
+    <value>Русский (Russian)</value>
+  </data>
+  <data name="RestoreConfigFileFailed" xml:space="preserve">
+    <value>Failed to restore configuration file</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>Reset</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
+  <data name="RemStagePointsToTemp" xml:space="preserve">
+    <value>rem STAGE points to the ColorVision content root in the temporary directory</value>
+  </data>
+  <data name="RemRobocopySuccess" xml:space="preserve">
+    <value>  rem Robocopy 0-7 considered success</value>
+  </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>Project/Solution (P)...</value>
+  </data>
+  <data name="ProjectNotFound" xml:space="preserve">
+    <value>Project {0} not found</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="PluginMissingId" xml:space="preserve">
+    <value>Plugin {0} missing unique ID, skipped</value>
+  </data>
+  <data name="PluginLoadError" xml:space="preserve">
+    <value>Plugin or manifest load error: {0}</value>
+  </data>
+  <data name="PluginDllNotFound" xml:space="preserve">
+    <value>Plugin DLL not found: {0}</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>Options</value>
+  </data>
+  <data name="OpenLogFolder" xml:space="preserve">
+    <value>OpenLogFolder</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>Open Folder</value>
+  </data>
+  <data name="OpenContainingFolder" xml:space="preserve">
+    <value>Open Containing Folder</value>
+  </data>
+  <data name="OpenConfigFile" xml:space="preserve">
+    <value>OpenConfigFile</value>
+  </data>
+  <data name="OnlineCronGenerator" xml:space="preserve">
+    <value>Online Cron Expression Generator</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>OK</value>
+  </data>
+  <data name="NoLocalLog4Output" xml:space="preserve">
+    <value>No local log4 output configured</value>
+  </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>MySQL tools</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value>Message Log Window</value>
+  </data>
+  <data name="MenuView" xml:space="preserve">
+    <value>_View</value>
+  </data>
+  <data name="MenuUndo" xml:space="preserve">
+    <value>_Undo</value>
+  </data>
+  <data name="MenuTool" xml:space="preserve">
+    <value>_Tool</value>
+  </data>
+  <data name="MenuTemplate" xml:space="preserve">
+    <value>Te_mplate</value>
+  </data>
+  <data name="MenuRename" xml:space="preserve">
+    <value>Rena_me</value>
+  </data>
+  <data name="MenuRedo" xml:space="preserve">
+    <value>_Redo</value>
+  </data>
+  <data name="MenuPrint" xml:space="preserve">
+    <value>_Print</value>
+  </data>
+  <data name="MenuPaste" xml:space="preserve">
+    <value>_Paste</value>
+  </data>
+  <data name="MenuOptions" xml:space="preserve">
+    <value>_Options</value>
+  </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>_Open</value>
+  </data>
+  <data name="MenuNew" xml:space="preserve">
+    <value>_New</value>
+  </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>_Language</value>
+  </data>
+  <data name="MenuHelp" xml:space="preserve">
+    <value>_Help</value>
+  </data>
+  <data name="MenuFile" xml:space="preserve">
+    <value>_File</value>
+  </data>
+  <data name="MenuExit" xml:space="preserve">
+    <value>E_xit</value>
+  </data>
+  <data name="MenuEdit" xml:space="preserve">
+    <value>_Edit</value>
+  </data>
+  <data name="MenuDelete" xml:space="preserve">
+    <value>_Delete</value>
+  </data>
+  <data name="MenuCut" xml:space="preserve">
+    <value>Cu_t</value>
+  </data>
+  <data name="MenuCopy" xml:space="preserve">
+    <value>_Copy</value>
+  </data>
+  <data name="MenuClose" xml:space="preserve">
+    <value>_Close</value>
+  </data>
+  <data name="MaxBackupCount" xml:space="preserve">
+    <value>Maximum Backup Count</value>
+  </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log level</value>
+  </data>
+  <data name="Log" xml:space="preserve">
+    <value>_Log</value>
+  </data>
+  <data name="LoadingPlugin" xml:space="preserve">
+    <value>Loading plugin: {0}</value>
+  </data>
+  <data name="LoadedPluginWithoutManifest" xml:space="preserve">
+    <value>Loaded plugin without manifest: {0}</value>
+  </data>
+  <data name="LanguageResartSign" xml:space="preserve">
+    <value>You must restart to apply your new language settings</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>한국어 (Korean)</value>
+  </data>
+  <data name="ja" xml:space="preserve">
+    <value>日本語 (Japanese)</value>
+  </data>
+  <data name="IsAutoSelect" xml:space="preserve">
+    <value>IsAutoSelect</value>
+  </data>
+  <data name="HotKeySet2" xml:space="preserve">
+    <value>Click to Set Hotkeys</value>
+  </data>
+  <data name="HotKeySet1" xml:space="preserve">
+    <value>Set Hotkeys by Pressing Keys</value>
+  </data>
+  <data name="HotKeys" xml:space="preserve">
+    <value>HotKeys</value>
+  </data>
+  <data name="HotkeyNormal" xml:space="preserve">
+    <value>HotkeyNormal</value>
+  </data>
+  <data name="HotkeyConflict" xml:space="preserve">
+    <value>Hotkey Conflict</value>
+  </data>
+  <data name="GlobalMode" xml:space="preserve">
+    <value>GlobalMode</value>
+  </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>Universal</value>
+  </data>
+  <data name="fr" xml:space="preserve">
+    <value>Français (French)</value>
+  </data>
+  <data name="FoundProjectDownloadConfirm" xml:space="preserve">
+    <value>Found project {0}, {1}, download?</value>
+  </data>
+  <data name="FilterSupportsRegex" xml:space="preserve">
+    <value>Filter supports regular</value>
+  </data>
+  <data name="ExeNameCannotBeEmpty" xml:space="preserve">
+    <value>exeName cannot be empty</value>
+  </data>
+  <data name="Execute" xml:space="preserve">
+    <value>Execute</value>
+  </data>
+  <data name="ErrorOccurred" xml:space="preserve">
+    <value>An error occurred</value>
+  </data>
+  <data name="EnableScheduledBackup" xml:space="preserve">
+    <value>Enable Scheduled Backup</value>
+  </data>
+  <data name="EnableCUDA" xml:space="preserve">
+    <value>Enable CUDA</value>
+  </data>
+  <data name="en" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="EchoXCOPYFailed" xml:space="preserve">
+    <value>  echo XCOPY copy failed, update aborted.</value>
+  </data>
+  <data name="EchoUsingXCOPY" xml:space="preserve">
+    <value>echo Using XCOPY fallback copy...</value>
+  </data>
+  <data name="EchoUpdateComplete" xml:space="preserve">
+    <value>echo Update complete. (Cleanup running in background)</value>
+  </data>
+  <data name="EchoTerminatingProcess" xml:space="preserve">
+    <value>echo Terminating process: {0}</value>
+  </data>
+  <data name="EchoTargetDirNotExist" xml:space="preserve">
+    <value>  echo Target directory does not exist, skipping backup.</value>
+  </data>
+  <data name="EchoStartCopyingFiles" xml:space="preserve">
+    <value>echo Starting to copy new version files...</value>
+  </data>
+  <data name="EchoSchedulingCleanup" xml:space="preserve">
+    <value>echo Scheduling delayed cleanup of temporary directory and script...</value>
+  </data>
+  <data name="EchoRobocopyNotFound" xml:space="preserve">
+    <value>  echo Robocopy not found, falling back to XCOPY...</value>
+  </data>
+  <data name="EchoRobocopyFailed" xml:space="preserve">
+    <value>     echo Robocopy failed, error code !RC!, trying XCOPY fallback...</value>
+  </data>
+  <data name="EchoRestartingProgram" xml:space="preserve">
+    <value>echo Restarting program...</value>
+  </data>
+  <data name="EchoCopyComplete" xml:space="preserve">
+    <value>echo Copy complete.</value>
+  </data>
+  <data name="EchoBackupTo" xml:space="preserve">
+    <value>  echo Backup to: %BKDIR%</value>
+  </data>
+  <data name="EchoBackupComplete" xml:space="preserve">
+    <value>  echo Backup complete.</value>
+  </data>
+  <data name="EchoBackingUpCurrentVersion" xml:space="preserve">
+    <value>echo Backing up current version...</value>
+  </data>
+  <data name="DownLoadMySql" xml:space="preserve">
+    <value>Download MySQL</value>
+  </data>
+  <data name="DownLoadMQTT" xml:space="preserve">
+    <value>Download MQTT</value>
+  </data>
+  <data name="Download" xml:space="preserve">
+    <value>Download</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>Descending</value>
+  </data>
+  <data name="DependencyVersionInsufficient" xml:space="preserve">
+    <value>Dependency {0} version insufficient, required: {1}, actual: {2}</value>
+  </data>
+  <data name="DependencyDllNotFound" xml:space="preserve">
+    <value>Dependency {0} DLL not found: {1}</value>
+  </data>
+  <data name="DependencyCheckException" xml:space="preserve">
+    <value>Exception checking dependency {0} version: {1}</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="CurrentSpeed" xml:space="preserve">
+    <value>Current Speed:</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="ConfirmDeletePlugin" xml:space="preserve">
+    <value>Confirm delete plugin {0}?</value>
+  </data>
+  <data name="ConfigurationParameters" xml:space="preserve">
+    <value>Configuration Parameters</value>
+  </data>
+  <data name="ConfigFileRestored" xml:space="preserve">
+    <value>Configuration file restored from recent backup</value>
+  </data>
+  <data name="ConfigFileResetDueToError" xml:space="preserve">
+    <value>Configuration file error, has been reset</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Clear</value>
+  </data>
+  <data name="CleanupBackupFailed" xml:space="preserve">
+    <value>Failed to cleanup backup files</value>
+  </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>Check for plugin updates</value>
+  </data>
+  <data name="CheckingForAdditionalProjects" xml:space="preserve">
+    <value>Checking for additional projects</value>
+  </data>
+  <data name="CheckingCUDASupport" xml:space="preserve">
+    <value>Checking CUDA support</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
+    <value>bool2VisibilityConverter resource not found</value>
+  </data>
+  <data name="BatchFilePathCannotBeEmpty" xml:space="preserve">
+    <value>batchFilePath cannot be empty</value>
+  </data>
+  <data name="BaseDirCannotBeEmpty" xml:space="preserve">
+    <value>baseDir cannot be empty</value>
+  </data>
+  <data name="BackupConfigFileFailed" xml:space="preserve">
+    <value>Failed to backup configuration file</value>
+  </data>
+  <data name="AutoSwitchSelectedView" xml:space="preserve">
+    <value>Automatically switch selected views</value>
+  </data>
+  <data name="AutoScrollToEnd" xml:space="preserve">
+    <value>Automatically scroll to the bottom</value>
+  </data>
+  <data name="AutoRefresh" xml:space="preserve">
+    <value>Auto Refresh</value>
+  </data>
+  <data name="AutoCleanOldBackups" xml:space="preserve">
+    <value>Automatically clean old backups when exceeded</value>
+  </data>
+  <data name="AutoAdjustColumnWidth" xml:space="preserve">
+    <value>Auto Adjust Column Width</value>
+  </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>Ascending</value>
+  </data>
+  <data name="ApplicationCurrentNotInitialized" xml:space="preserve">
+    <value>Application.Current not initialized</value>
+  </data>
+  <data name="AllFiles" xml:space="preserve">
+    <value>All Files (*.*)|*.*</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Loading</value>
   </data>
 </root>
