--- a/UI/ColorVision.UI.Desktop/Properties/Resources.ko.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.ko.resx
@@ -127,7 +127,7 @@
     <value>구성 저장</value>
   </data>
   <data name="OpenConfigFolder" xml:space="preserve">
-    <value>구성 폴더를 엽니다</value>
+    <value>오픈 구성 폴더</value>
   </data>
   <data name="SetupWizard" xml:space="preserve">
     <value>구성 마법사</value>
@@ -146,5 +146,473 @@
   </data>
   <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
     <value>아직 완료되지 않은 구성이 몇 가지 있습니다. 건너뛰시겠습니까?</value>
+  </data>
+  <data name="ExportSettings" xml:space="preserve">
+    <value>내보내기 설정</value>
+  </data>
+  <data name="ImportExportSettings" xml:space="preserve">
+    <value>가져오기/내보내기 설정</value>
+  </data>
+  <data name="ImportSettings" xml:space="preserve">
+    <value>가져오기 설정</value>
+  </data>
+  <data name="OpenStore" xml:space="preserve">
+    <value>오픈스토어</value>
+  </data>
+  <data name="InstallPackage" xml:space="preserve">
+    <value>패키지 설치</value>
+  </data>
+  <data name="OpenViewDllViersion" xml:space="preserve">
+    <value>오픈뷰DllViersion</value>
+  </data>
+  <data name="Restart" xml:space="preserve">
+    <value>재시작</value>
+  </data>
+  <data name="UpdateAll" xml:space="preserve">
+    <value>모두 업데이트</value>
+  </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>플러그인 관리자 창</value>
+  </data>
+  <data name="SelectExtractFolder" xml:space="preserve">
+    <value>플러그인을 추출할 대상 폴더를 선택하세요.</value>
+  </data>
+  <data name="ExtractPlugin" xml:space="preserve">
+    <value>추출 플러그인</value>
+  </data>
+  <data name="PluginExtractSuccess" xml:space="preserve">
+    <value>플러그인이 성공적으로 추출되었습니다: {0}</value>
+  </data>
+  <data name="PluginExtractFailed" xml:space="preserve">
+    <value>플러그인 추출 실패</value>
+  </data>
+  <data name="Install" xml:space="preserve">
+    <value>설치하다</value>
+  </data>
+  <data name="SortByColumn" xml:space="preserve">
+    <value>{0}(으)로 정렬</value>
+  </data>
+  <data name="zh-Hant" xml:space="preserve">
+    <value>繁體中文 (중국어 번체)</value>
+  </data>
+  <data name="zh-Hans" xml:space="preserve">
+    <value>简体中文 (중국어 간체)</value>
+  </data>
+  <data name="WriteConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 {0} 쓰기 실패</value>
+  </data>
+  <data name="WindowSingle" xml:space="preserve">
+    <value>독립 창</value>
+  </data>
+  <data name="WindowHidden" xml:space="preserve">
+    <value>숨기기</value>
+  </data>
+  <data name="ViewMode9" xml:space="preserve">
+    <value>보기 모드 9</value>
+  </data>
+  <data name="ViewMode4" xml:space="preserve">
+    <value>보기 모드 4</value>
+  </data>
+  <data name="ViewMode2" xml:space="preserve">
+    <value>보기 모드 2</value>
+  </data>
+  <data name="ViewMode1" xml:space="preserve">
+    <value>보기 모드 1</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>버전</value>
+  </data>
+  <data name="UseSystem" xml:space="preserve">
+    <value>시스템 테마 사용</value>
+  </data>
+  <data name="UpdateLog4NetLevel" xml:space="preserve">
+    <value>Log4Net 로그 수준 업데이트 중:</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>고쳐 쓰다</value>
+  </data>
+  <data name="UnsupportedFileFormat" xml:space="preserve">
+    <value>지원되지 않는 파일 형식</value>
+  </data>
+  <data name="TimeLeft" xml:space="preserve">
+    <value>남은 시간:</value>
+  </data>
+  <data name="SortOptions" xml:space="preserve">
+    <value>정렬 옵션</value>
+  </data>
+  <data name="SortDefault" xml:space="preserve">
+    <value>정렬기본값</value>
+  </data>
+  <data name="SortByName" xml:space="preserve">
+    <value>이름순 정렬</value>
+  </data>
+  <data name="SortByCategory" xml:space="preserve">
+    <value>카테고리별 정렬</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>소켓 관리 창</value>
+  </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>버퍼 크기</value>
+  </data>
+  <data name="SmartSortDescending" xml:space="preserve">
+    <value>스마트 정렬 (내림차순)</value>
+  </data>
+  <data name="SmartSortAscending" xml:space="preserve">
+    <value>스마트 정렬 (오름차순)</value>
+  </data>
+  <data name="SaveSingleConfigFailed" xml:space="preserve">
+    <value>단일 구성 {0} 저장 실패</value>
+  </data>
+  <data name="ru" xml:space="preserve">
+    <value>Русский (러시아어)</value>
+  </data>
+  <data name="RestoreConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 복원 실패</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>다시 놓기</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>이름 바꾸기</value>
+  </data>
+  <data name="RemStagePointsToTemp" xml:space="preserve">
+    <value>rem STAGE는 임시 디렉터리의 ColorVision 콘텐츠 루트를 가리킵니다</value>
+  </data>
+  <data name="RemRobocopySuccess" xml:space="preserve">
+    <value>  rem Robocopy 0-7은 성공으로 간주됩니다</value>
+  </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>프로젝트/솔루션(P)...</value>
+  </data>
+  <data name="ProjectNotFound" xml:space="preserve">
+    <value>프로젝트 {0}을(를) 찾을 수 없습니다</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>플러그인 이름</value>
+  </data>
+  <data name="PluginMissingId" xml:space="preserve">
+    <value>플러그인 {0}에 고유 ID가 없습니다. 건너뛰었습니다</value>
+  </data>
+  <data name="PluginLoadError" xml:space="preserve">
+    <value>플러그인 또는 매니페스트 로드 오류: {0}</value>
+  </data>
+  <data name="PluginDllNotFound" xml:space="preserve">
+    <value>플러그인 DLL을 찾을 수 없습니다: {0}</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>옵션</value>
+  </data>
+  <data name="OpenLogFolder" xml:space="preserve">
+    <value>오픈로그폴더</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>폴더 열기</value>
+  </data>
+  <data name="OpenContainingFolder" xml:space="preserve">
+    <value>포함 폴더 열기</value>
+  </data>
+  <data name="OpenConfigFile" xml:space="preserve">
+    <value>OpenConfigFile</value>
+  </data>
+  <data name="OnlineCronGenerator" xml:space="preserve">
+    <value>온라인 Cron 표현식 생성기</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>확인</value>
+  </data>
+  <data name="NoLocalLog4Output" xml:space="preserve">
+    <value>로컬 log4 출력이 구성되지 않았습니다</value>
+  </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>MySQL 도구</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value>메시지 로그 창</value>
+  </data>
+  <data name="MenuView" xml:space="preserve">
+    <value>보기 (_V)</value>
+  </data>
+  <data name="MenuUndo" xml:space="preserve">
+    <value>취소 (_U)</value>
+  </data>
+  <data name="MenuTool" xml:space="preserve">
+    <value>도구 (_T)</value>
+  </data>
+  <data name="MenuTemplate" xml:space="preserve">
+    <value>템플릿(_M)</value>
+  </data>
+  <data name="MenuRename" xml:space="preserve">
+    <value>이름 바꾸기(_M)</value>
+  </data>
+  <data name="MenuRedo" xml:space="preserve">
+    <value>다시 하기</value>
+  </data>
+  <data name="MenuPrint" xml:space="preserve">
+    <value>인쇄(_P)</value>
+  </data>
+  <data name="MenuPaste" xml:space="preserve">
+    <value>페이스트(_P)</value>
+  </data>
+  <data name="MenuOptions" xml:space="preserve">
+    <value>옵션 (_O)</value>
+  </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>열기 (_O)</value>
+  </data>
+  <data name="MenuNew" xml:space="preserve">
+    <value>새로 만들기 (_N)</value>
+  </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>언어(_L)</value>
+  </data>
+  <data name="MenuHelp" xml:space="preserve">
+    <value>도움 (_H)</value>
+  </data>
+  <data name="MenuFile" xml:space="preserve">
+    <value>파일 (_F)</value>
+  </data>
+  <data name="MenuExit" xml:space="preserve">
+    <value>종료 (_X)</value>
+  </data>
+  <data name="MenuEdit" xml:space="preserve">
+    <value>편집 (_E)</value>
+  </data>
+  <data name="MenuDelete" xml:space="preserve">
+    <value>삭제 (_D)</value>
+  </data>
+  <data name="MenuCut" xml:space="preserve">
+    <value>잘라내기 (_T)</value>
+  </data>
+  <data name="MenuCopy" xml:space="preserve">
+    <value>복사 (_C)</value>
+  </data>
+  <data name="MenuClose" xml:space="preserve">
+    <value>닫기_C)</value>
+  </data>
+  <data name="MaxBackupCount" xml:space="preserve">
+    <value>최대 백업 수</value>
+  </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>로그 수준</value>
+  </data>
+  <data name="Log" xml:space="preserve">
+    <value>통나무</value>
+  </data>
+  <data name="LoadingPlugin" xml:space="preserve">
+    <value>플러그인 로드 중: {0}</value>
+  </data>
+  <data name="LoadedPluginWithoutManifest" xml:space="preserve">
+    <value>매니페스트 없이 플러그인을 로드했습니다: {0}</value>
+  </data>
+  <data name="LanguageResartSign" xml:space="preserve">
+    <value>새로운 언어 설정을 적용하려면 재시작해야 합니다</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>UI 언어</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>한국어</value>
+  </data>
+  <data name="ja" xml:space="preserve">
+    <value>日本語 (일본어)</value>
+  </data>
+  <data name="IsAutoSelect" xml:space="preserve">
+    <value>자동 선택 여부</value>
+  </data>
+  <data name="HotKeySet2" xml:space="preserve">
+    <value>클릭하여 핫키 설정하기</value>
+  </data>
+  <data name="HotKeySet1" xml:space="preserve">
+    <value>Set Hotkeys by Pressing Keys</value>
+  </data>
+  <data name="HotKeys" xml:space="preserve">
+    <value>키보드 단축키</value>
+  </data>
+  <data name="HotkeyNormal" xml:space="preserve">
+    <value>정상</value>
+  </data>
+  <data name="HotkeyConflict" xml:space="preserve">
+    <value>충돌</value>
+  </data>
+  <data name="GlobalMode" xml:space="preserve">
+    <value>글로벌</value>
+  </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>일반 설정</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>만능인</value>
+  </data>
+  <data name="fr" xml:space="preserve">
+    <value>Français (프랑스어)</value>
+  </data>
+  <data name="FoundProjectDownloadConfirm" xml:space="preserve">
+    <value>프로젝트 {0}, {1}을(를) 찾았습니다. 다운로드하시겠습니까?</value>
+  </data>
+  <data name="FilterSupportsRegex" xml:space="preserve">
+    <value>필터는 정규식을 지원합니다</value>
+  </data>
+  <data name="ExeNameCannotBeEmpty" xml:space="preserve">
+    <value>exeName은 비워 둘 수 없습니다</value>
+  </data>
+  <data name="Execute" xml:space="preserve">
+    <value>실행</value>
+  </data>
+  <data name="ErrorOccurred" xml:space="preserve">
+    <value>에러 발생됨</value>
+  </data>
+  <data name="EnableScheduledBackup" xml:space="preserve">
+    <value>예약된 백업 활성화</value>
+  </data>
+  <data name="EnableCUDA" xml:space="preserve">
+    <value>CUDA 활성화</value>
+  </data>
+  <data name="en" xml:space="preserve">
+    <value>English (영어)</value>
+  </data>
+  <data name="EchoXCOPYFailed" xml:space="preserve">
+    <value>  echo XCOPY 복사 실패, 업데이트 중단됨.</value>
+  </data>
+  <data name="EchoUsingXCOPY" xml:space="preserve">
+    <value>echo XCOPY 대체 복사 사용 중...</value>
+  </data>
+  <data name="EchoUpdateComplete" xml:space="preserve">
+    <value>echo 업데이트 완료. (백그라운드에서 정리 실행 중)</value>
+  </data>
+  <data name="EchoTerminatingProcess" xml:space="preserve">
+    <value>echo 프로세스 종료 중: {0}</value>
+  </data>
+  <data name="EchoTargetDirNotExist" xml:space="preserve">
+    <value>  echo 대상 디렉터리가 존재하지 않습니다. 백업을 건너뜁니다.</value>
+  </data>
+  <data name="EchoStartCopyingFiles" xml:space="preserve">
+    <value>echo 새 버전 파일 복사 시작...</value>
+  </data>
+  <data name="EchoSchedulingCleanup" xml:space="preserve">
+    <value>echo 임시 디렉터리 및 스크립트의 지연된 정리 예약 중...</value>
+  </data>
+  <data name="EchoRobocopyNotFound" xml:space="preserve">
+    <value>  echo Robocopy를 찾을 수 없습니다. XCOPY로 대체...</value>
+  </data>
+  <data name="EchoRobocopyFailed" xml:space="preserve">
+    <value>     echo Robocopy 실패, 오류 코드 !RC!, XCOPY 대체 시도 중...</value>
+  </data>
+  <data name="EchoRestartingProgram" xml:space="preserve">
+    <value>echo 프로그램 다시 시작 중...</value>
+  </data>
+  <data name="EchoCopyComplete" xml:space="preserve">
+    <value>echo 복사 완료.</value>
+  </data>
+  <data name="EchoBackupTo" xml:space="preserve">
+    <value>  echo 백업 위치: %BKDIR%</value>
+  </data>
+  <data name="EchoBackupComplete" xml:space="preserve">
+    <value>  echo 백업 완료.</value>
+  </data>
+  <data name="EchoBackingUpCurrentVersion" xml:space="preserve">
+    <value>echo 현재 버전 백업 중...</value>
+  </data>
+  <data name="DownLoadMySql" xml:space="preserve">
+    <value>MySQL 다운로드</value>
+  </data>
+  <data name="DownLoadMQTT" xml:space="preserve">
+    <value>MQTT 다운로드</value>
+  </data>
+  <data name="Download" xml:space="preserve">
+    <value>다운로드</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>내림차순</value>
+  </data>
+  <data name="DependencyVersionInsufficient" xml:space="preserve">
+    <value>종속성 {0} 버전이 부족합니다. 필요: {1}, 실제: {2}</value>
+  </data>
+  <data name="DependencyDllNotFound" xml:space="preserve">
+    <value>종속성 {0} DLL을 찾을 수 없습니다: {1}</value>
+  </data>
+  <data name="DependencyCheckException" xml:space="preserve">
+    <value>종속성 {0} 버전 확인 중 예외 발생: {1}</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>삭제</value>
+  </data>
+  <data name="CurrentSpeed" xml:space="preserve">
+    <value>현재 속도:</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>업데이트</value>
+  </data>
+  <data name="ConfirmDeletePlugin" xml:space="preserve">
+    <value>플러그인 {0}을(를) 삭제하시겠습니까?</value>
+  </data>
+  <data name="ConfigurationParameters" xml:space="preserve">
+    <value>구성 매개변수</value>
+  </data>
+  <data name="ConfigFileRestored" xml:space="preserve">
+    <value>최근 백업에서 구성 파일을 복원했습니다</value>
+  </data>
+  <data name="ConfigFileResetDueToError" xml:space="preserve">
+    <value>구성 파일 오류, 재설정되었습니다</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>폐쇄</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>분명한</value>
+  </data>
+  <data name="CleanupBackupFailed" xml:space="preserve">
+    <value>백업 파일 정리 실패</value>
+  </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>플러그인 업데이트 확인</value>
+  </data>
+  <data name="CheckingForAdditionalProjects" xml:space="preserve">
+    <value>추가 프로젝트 확인 중</value>
+  </data>
+  <data name="CheckingCUDASupport" xml:space="preserve">
+    <value>CUDA 지원 확인 중</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>취소</value>
+  </data>
+  <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
+    <value>bool2VisibilityConverter 리소스를 찾을 수 없습니다</value>
+  </data>
+  <data name="BatchFilePathCannotBeEmpty" xml:space="preserve">
+    <value>batchFilePath는 비워 둘 수 없습니다</value>
+  </data>
+  <data name="BaseDirCannotBeEmpty" xml:space="preserve">
+    <value>baseDir는 비워 둘 수 없습니다</value>
+  </data>
+  <data name="BackupConfigFileFailed" xml:space="preserve">
+    <value>구성 파일 백업 실패</value>
+  </data>
+  <data name="AutoSwitchSelectedView" xml:space="preserve">
+    <value>선택한 보기를 자동으로 전환</value>
+  </data>
+  <data name="AutoScrollToEnd" xml:space="preserve">
+    <value>자동으로 아래쪽으로 스크롤</value>
+  </data>
+  <data name="AutoRefresh" xml:space="preserve">
+    <value>자동 새로고침</value>
+  </data>
+  <data name="AutoCleanOldBackups" xml:space="preserve">
+    <value>초과 시 이전 백업 자동 정리</value>
+  </data>
+  <data name="AutoAdjustColumnWidth" xml:space="preserve">
+    <value>열 너비 자동 조정</value>
+  </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>오름차순</value>
+  </data>
+  <data name="ApplicationCurrentNotInitialized" xml:space="preserve">
+    <value>Application.Current가 초기화되지 않았습니다</value>
+  </data>
+  <data name="AllFiles" xml:space="preserve">
+    <value>모든 파일 (*.*)|*.*</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>짐</value>
   </data>
 </root>
