--- a/UI/ColorVision.UI.Desktop/Properties/Resources.ru.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.ru.resx
@@ -127,7 +127,7 @@
     <value>Сохранить конфигурацию</value>
   </data>
   <data name="OpenConfigFolder" xml:space="preserve">
-    <value>Откройте папку конфигурации</value>
+    <value>ОткрытьКонфигурациюПапка</value>
   </data>
   <data name="SetupWizard" xml:space="preserve">
     <value>Мастер настройки</value>
@@ -146,5 +146,473 @@
   </data>
   <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
     <value>Есть ещё несколько незаконченных конфигураций. Хотите их пропустить?</value>
+  </data>
+  <data name="ExportSettings" xml:space="preserve">
+    <value>Экспорт настроек</value>
+  </data>
+  <data name="ImportExportSettings" xml:space="preserve">
+    <value>ImportExportSettings</value>
+  </data>
+  <data name="ImportSettings" xml:space="preserve">
+    <value>ImportSettings</value>
+  </data>
+  <data name="OpenStore" xml:space="preserve">
+    <value>OpenStore</value>
+  </data>
+  <data name="InstallPackage" xml:space="preserve">
+    <value>InstallPackage</value>
+  </data>
+  <data name="OpenViewDllViersion" xml:space="preserve">
+    <value>OpenViewDllViersion</value>
+  </data>
+  <data name="Restart" xml:space="preserve">
+    <value>Перезапуск</value>
+  </data>
+  <data name="UpdateAll" xml:space="preserve">
+    <value>ОбновитьВсе</value>
+  </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>ОкноМенеджераПлагинов</value>
+  </data>
+  <data name="SelectExtractFolder" xml:space="preserve">
+    <value>Выберите целевую папку, из которой вы хотите извлечь плагин.</value>
+  </data>
+  <data name="ExtractPlugin" xml:space="preserve">
+    <value>Плагин извлечения</value>
+  </data>
+  <data name="PluginExtractSuccess" xml:space="preserve">
+    <value>Плагин успешно извлечен: {0}</value>
+  </data>
+  <data name="PluginExtractFailed" xml:space="preserve">
+    <value>Извлечение плагина не удалось.</value>
+  </data>
+  <data name="Install" xml:space="preserve">
+    <value>Установить</value>
+  </data>
+  <data name="SortByColumn" xml:space="preserve">
+    <value>Сортировать по {0}</value>
+  </data>
+  <data name="zh-Hant" xml:space="preserve">
+    <value>繁體中文 (Традиционный китайский)</value>
+  </data>
+  <data name="zh-Hans" xml:space="preserve">
+    <value>简体中文 (Упрощенный китайский)</value>
+  </data>
+  <data name="WriteConfigFileFailed" xml:space="preserve">
+    <value>Не удалось записать файл конфигурации {0}</value>
+  </data>
+  <data name="WindowSingle" xml:space="preserve">
+    <value>независимое окно</value>
+  </data>
+  <data name="WindowHidden" xml:space="preserve">
+    <value>скрывать</value>
+  </data>
+  <data name="ViewMode9" xml:space="preserve">
+    <value>Режим просмотра 9</value>
+  </data>
+  <data name="ViewMode4" xml:space="preserve">
+    <value>Режим просмотра 4</value>
+  </data>
+  <data name="ViewMode2" xml:space="preserve">
+    <value>Режим просмотра 2</value>
+  </data>
+  <data name="ViewMode1" xml:space="preserve">
+    <value>Режим просмотра 1</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Версия</value>
+  </data>
+  <data name="UseSystem" xml:space="preserve">
+    <value>Следуйте системе</value>
+  </data>
+  <data name="UpdateLog4NetLevel" xml:space="preserve">
+    <value>Обновление уровня журнала Log4Net</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>возобновлять</value>
+  </data>
+  <data name="UnsupportedFileFormat" xml:space="preserve">
+    <value>Неподдерживаемый формат файла</value>
+  </data>
+  <data name="TimeLeft" xml:space="preserve">
+    <value>оставшееся время:</value>
+  </data>
+  <data name="SortOptions" xml:space="preserve">
+    <value>Параметры сортировки</value>
+  </data>
+  <data name="SortDefault" xml:space="preserve">
+    <value>Сортировка по умолчанию</value>
+  </data>
+  <data name="SortByName" xml:space="preserve">
+    <value>Сортировать по имени</value>
+  </data>
+  <data name="SortByCategory" xml:space="preserve">
+    <value>Сортировать по категории</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>Окно управления сокетами</value>
+  </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>размер буфера</value>
+  </data>
+  <data name="SmartSortDescending" xml:space="preserve">
+    <value>Умная сортировка (по убыванию)</value>
+  </data>
+  <data name="SmartSortAscending" xml:space="preserve">
+    <value>Умная сортировка (по возрастанию)</value>
+  </data>
+  <data name="SaveSingleConfigFailed" xml:space="preserve">
+    <value>Не удалось сохранить единую конфигурацию {0}</value>
+  </data>
+  <data name="ru" xml:space="preserve">
+    <value>Русский</value>
+  </data>
+  <data name="RestoreConfigFileFailed" xml:space="preserve">
+    <value>Не удалось восстановить файл конфигурации</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>перезагрузить</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Переименовать</value>
+  </data>
+  <data name="RemStagePointsToTemp" xml:space="preserve">
+    <value>rem STAGE указывает на корень содержимого ColorVision во временном каталоге</value>
+  </data>
+  <data name="RemRobocopySuccess" xml:space="preserve">
+    <value>  rem Robocopy 0-7 считается успехом</value>
+  </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>Проект/Решение (П)...</value>
+  </data>
+  <data name="ProjectNotFound" xml:space="preserve">
+    <value>Проект {0} не найден</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>название плагина</value>
+  </data>
+  <data name="PluginMissingId" xml:space="preserve">
+    <value>У плагина {0} отсутствует уникальный ID, пропущен</value>
+  </data>
+  <data name="PluginLoadError" xml:space="preserve">
+    <value>Ошибка загрузки плагина или манифеста: {0}</value>
+  </data>
+  <data name="PluginDllNotFound" xml:space="preserve">
+    <value>DLL плагина не найдена: {0}</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>Параметры</value>
+  </data>
+  <data name="OpenLogFolder" xml:space="preserve">
+    <value>OpenLogFolder</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>Открыть папку</value>
+  </data>
+  <data name="OpenContainingFolder" xml:space="preserve">
+    <value>Открыть содержащую папку</value>
+  </data>
+  <data name="OpenConfigFile" xml:space="preserve">
+    <value>OpenConfigFile</value>
+  </data>
+  <data name="OnlineCronGenerator" xml:space="preserve">
+    <value>Онлайн-генератор выражений Cron</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>OK</value>
+  </data>
+  <data name="NoLocalLog4Output" xml:space="preserve">
+    <value>Локальный вывод log4 не настроен</value>
+  </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>Инструменты MySQL</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value>Окно журнала сообщений</value>
+  </data>
+  <data name="MenuView" xml:space="preserve">
+    <value>Посмотреть(В)</value>
+  </data>
+  <data name="MenuUndo" xml:space="preserve">
+    <value>Отменить(U)</value>
+  </data>
+  <data name="MenuTool" xml:space="preserve">
+    <value>Инструмент(Т)</value>
+  </data>
+  <data name="MenuTemplate" xml:space="preserve">
+    <value>Шаблон(_M)</value>
+  </data>
+  <data name="MenuRename" xml:space="preserve">
+    <value>Переименовать(_М)</value>
+  </data>
+  <data name="MenuRedo" xml:space="preserve">
+    <value>Повторить</value>
+  </data>
+  <data name="MenuPrint" xml:space="preserve">
+    <value>Печать(_P)</value>
+  </data>
+  <data name="MenuPaste" xml:space="preserve">
+    <value>Вставить(_P)</value>
+  </data>
+  <data name="MenuOptions" xml:space="preserve">
+    <value>Вариант(О)</value>
+  </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>_Открыть</value>
+  </data>
+  <data name="MenuNew" xml:space="preserve">
+    <value>Новый(Н)</value>
+  </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>Язык(Л)</value>
+  </data>
+  <data name="MenuHelp" xml:space="preserve">
+    <value>помощь</value>
+  </data>
+  <data name="MenuFile" xml:space="preserve">
+    <value>Файл(Ф)</value>
+  </data>
+  <data name="MenuExit" xml:space="preserve">
+    <value>Выход(Х)</value>
+  </data>
+  <data name="MenuEdit" xml:space="preserve">
+    <value>Изменить (Е)</value>
+  </data>
+  <data name="MenuDelete" xml:space="preserve">
+    <value>Удалить(Д)</value>
+  </data>
+  <data name="MenuCut" xml:space="preserve">
+    <value>Вырезать(Т)</value>
+  </data>
+  <data name="MenuCopy" xml:space="preserve">
+    <value>Копировать (С)</value>
+  </data>
+  <data name="MenuClose" xml:space="preserve">
+    <value>Закрыть(_C)</value>
+  </data>
+  <data name="MaxBackupCount" xml:space="preserve">
+    <value>Максимальное количество резервных копий</value>
+  </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Уровень журнала</value>
+  </data>
+  <data name="Log" xml:space="preserve">
+    <value>Бревно</value>
+  </data>
+  <data name="LoadingPlugin" xml:space="preserve">
+    <value>Загрузка плагина: {0}</value>
+  </data>
+  <data name="LoadedPluginWithoutManifest" xml:space="preserve">
+    <value>Загружен плагин без манифеста: {0}</value>
+  </data>
+  <data name="LanguageResartSign" xml:space="preserve">
+    <value>Необходимо перезагрузить компьютер, чтобы использовать новые языковые настройки</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>язык пользовательского интерфейса</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>한국어 (Корейский)</value>
+  </data>
+  <data name="ja" xml:space="preserve">
+    <value>日本語 (Японский)</value>
+  </data>
+  <data name="IsAutoSelect" xml:space="preserve">
+    <value>АвтоВыбор</value>
+  </data>
+  <data name="HotKeySet2" xml:space="preserve">
+    <value>Нажмите, чтобы установить сочетания клавиш</value>
+  </data>
+  <data name="HotKeySet1" xml:space="preserve">
+    <value>Нажмите сочетание клавиш настройки клавиатуры</value>
+  </data>
+  <data name="HotKeys" xml:space="preserve">
+    <value>быстрая клавиша</value>
+  </data>
+  <data name="HotkeyNormal" xml:space="preserve">
+    <value>нормальный</value>
+  </data>
+  <data name="HotkeyConflict" xml:space="preserve">
+    <value>конфликт</value>
+  </data>
+  <data name="GlobalMode" xml:space="preserve">
+    <value>общая ситуация</value>
+  </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>Общие настройки</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>Универсальный</value>
+  </data>
+  <data name="fr" xml:space="preserve">
+    <value>Français (Французский)</value>
+  </data>
+  <data name="FoundProjectDownloadConfirm" xml:space="preserve">
+    <value>Найден проект {0}, {1}, скачать?</value>
+  </data>
+  <data name="FilterSupportsRegex" xml:space="preserve">
+    <value>Фильтр поддерживает регулярные выражения</value>
+  </data>
+  <data name="ExeNameCannotBeEmpty" xml:space="preserve">
+    <value>exeName не может быть пустым</value>
+  </data>
+  <data name="Execute" xml:space="preserve">
+    <value>Выполнить</value>
+  </data>
+  <data name="ErrorOccurred" xml:space="preserve">
+    <value>Произошла ошибка</value>
+  </data>
+  <data name="EnableScheduledBackup" xml:space="preserve">
+    <value>Включить запланированное резервное копирование</value>
+  </data>
+  <data name="EnableCUDA" xml:space="preserve">
+    <value>Включить CUDA</value>
+  </data>
+  <data name="en" xml:space="preserve">
+    <value>English (Английский)</value>
+  </data>
+  <data name="EchoXCOPYFailed" xml:space="preserve">
+    <value>  echo Копирование XCOPY не удалось, обновление прервано.</value>
+  </data>
+  <data name="EchoUsingXCOPY" xml:space="preserve">
+    <value>echo Использование резервного копирования XCOPY...</value>
+  </data>
+  <data name="EchoUpdateComplete" xml:space="preserve">
+    <value>echo Обновление завершено. (Очистка выполняется в фоновом режиме)</value>
+  </data>
+  <data name="EchoTerminatingProcess" xml:space="preserve">
+    <value>echo Завершение процесса: {0}</value>
+  </data>
+  <data name="EchoTargetDirNotExist" xml:space="preserve">
+    <value>  echo Целевой каталог не существует, резервное копирование пропущено.</value>
+  </data>
+  <data name="EchoStartCopyingFiles" xml:space="preserve">
+    <value>echo Начало копирования новых файлов версии...</value>
+  </data>
+  <data name="EchoSchedulingCleanup" xml:space="preserve">
+    <value>echo Планирование отложенной очистки временного каталога и скрипта...</value>
+  </data>
+  <data name="EchoRobocopyNotFound" xml:space="preserve">
+    <value>  echo Robocopy не найден, переход к XCOPY...</value>
+  </data>
+  <data name="EchoRobocopyFailed" xml:space="preserve">
+    <value>     echo Robocopy не удалось, код ошибки !RC!, попытка использовать XCOPY...</value>
+  </data>
+  <data name="EchoRestartingProgram" xml:space="preserve">
+    <value>echo Перезапуск программы...</value>
+  </data>
+  <data name="EchoCopyComplete" xml:space="preserve">
+    <value>echo Копирование завершено.</value>
+  </data>
+  <data name="EchoBackupTo" xml:space="preserve">
+    <value>  echo Резервное копирование в: %BKDIR%</value>
+  </data>
+  <data name="EchoBackupComplete" xml:space="preserve">
+    <value>  echo Резервное копирование завершено.</value>
+  </data>
+  <data name="EchoBackingUpCurrentVersion" xml:space="preserve">
+    <value>echo Резервное копирование текущей версии...</value>
+  </data>
+  <data name="DownLoadMySql" xml:space="preserve">
+    <value>Загрузить MySQL</value>
+  </data>
+  <data name="DownLoadMQTT" xml:space="preserve">
+    <value>Загрузить MQTT</value>
+  </data>
+  <data name="Download" xml:space="preserve">
+    <value>Скачать</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>По убыванию</value>
+  </data>
+  <data name="DependencyVersionInsufficient" xml:space="preserve">
+    <value>Версия зависимости {0} недостаточна, требуется: {1}, фактическая: {2}</value>
+  </data>
+  <data name="DependencyDllNotFound" xml:space="preserve">
+    <value>DLL зависимости {0} не найдена: {1}</value>
+  </data>
+  <data name="DependencyCheckException" xml:space="preserve">
+    <value>Исключение при проверке версии зависимости {0}: {1}</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>удалить</value>
+  </data>
+  <data name="CurrentSpeed" xml:space="preserve">
+    <value>Текущая скорость:</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Обновить</value>
+  </data>
+  <data name="ConfirmDeletePlugin" xml:space="preserve">
+    <value>Подтвердить удаление плагина {0}?</value>
+  </data>
+  <data name="ConfigurationParameters" xml:space="preserve">
+    <value>Параметры конфигурации</value>
+  </data>
+  <data name="ConfigFileRestored" xml:space="preserve">
+    <value>Файл конфигурации восстановлен из недавней резервной копии</value>
+  </data>
+  <data name="ConfigFileResetDueToError" xml:space="preserve">
+    <value>Ошибка файла конфигурации, сброшен</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>закрытие</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>Прозрачный</value>
+  </data>
+  <data name="CleanupBackupFailed" xml:space="preserve">
+    <value>Не удалось очистить файлы резервных копий</value>
+  </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>Проверить обновления плагинов</value>
+  </data>
+  <data name="CheckingForAdditionalProjects" xml:space="preserve">
+    <value>Проверка дополнительных проектов</value>
+  </data>
+  <data name="CheckingCUDASupport" xml:space="preserve">
+    <value>Проверка поддержки CUDA</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Отмена</value>
+  </data>
+  <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
+    <value>Ресурс bool2VisibilityConverter не найден</value>
+  </data>
+  <data name="BatchFilePathCannotBeEmpty" xml:space="preserve">
+    <value>batchFilePath не может быть пустым</value>
+  </data>
+  <data name="BaseDirCannotBeEmpty" xml:space="preserve">
+    <value>baseDir не может быть пустым</value>
+  </data>
+  <data name="BackupConfigFileFailed" xml:space="preserve">
+    <value>Не удалось создать резервную копию файла конфигурации</value>
+  </data>
+  <data name="AutoSwitchSelectedView" xml:space="preserve">
+    <value>Автоматически переключать выбранные представления</value>
+  </data>
+  <data name="AutoScrollToEnd" xml:space="preserve">
+    <value>Автоматически прокручивать вниз</value>
+  </data>
+  <data name="AutoRefresh" xml:space="preserve">
+    <value>Автоматическое обновление</value>
+  </data>
+  <data name="AutoCleanOldBackups" xml:space="preserve">
+    <value>Автоматически очищать старые резервные копии при превышении</value>
+  </data>
+  <data name="AutoAdjustColumnWidth" xml:space="preserve">
+    <value>Автоматически регулировать ширину столбцов</value>
+  </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>По возрастанию</value>
+  </data>
+  <data name="ApplicationCurrentNotInitialized" xml:space="preserve">
+    <value>Application.Current не инициализирован</value>
+  </data>
+  <data name="AllFiles" xml:space="preserve">
+    <value>Все файлы (*.*)|*.*</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>нагрузка</value>
   </data>
 </root>
