--- a/UI/ColorVision.UI.Desktop/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI.Desktop/Properties/Resources.zh-Hant.resx
@@ -147,4 +147,472 @@
   <data name="SkipIncompleteConfigPrompt" xml:space="preserve">
     <value>還有未完成的配置，是否跳過</value>
   </data>
+  <data name="ExportSettings" xml:space="preserve">
+    <value>匯出設定</value>
+  </data>
+  <data name="ImportExportSettings" xml:space="preserve">
+    <value>導入導出設定</value>
+  </data>
+  <data name="ImportSettings" xml:space="preserve">
+    <value>導入設定</value>
+  </data>
+  <data name="OpenStore" xml:space="preserve">
+    <value>開放商店</value>
+  </data>
+  <data name="InstallPackage" xml:space="preserve">
+    <value>安裝包</value>
+  </data>
+  <data name="OpenViewDllViersion" xml:space="preserve">
+    <value>OpenViewDll版本</value>
+  </data>
+  <data name="Restart" xml:space="preserve">
+    <value>重啟</value>
+  </data>
+  <data name="UpdateAll" xml:space="preserve">
+    <value>更新所有</value>
+  </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>插件管理器視窗</value>
+  </data>
+  <data name="SelectExtractFolder" xml:space="preserve">
+    <value>選擇要提取插件的目標資料夾</value>
+  </data>
+  <data name="ExtractPlugin" xml:space="preserve">
+    <value>提取插件</value>
+  </data>
+  <data name="PluginExtractSuccess" xml:space="preserve">
+    <value>插件已成功提取到: {0}</value>
+  </data>
+  <data name="PluginExtractFailed" xml:space="preserve">
+    <value>插件提取失敗</value>
+  </data>
+  <data name="Install" xml:space="preserve">
+    <value>安裝</value>
+  </data>
+  <data name="SortByColumn" xml:space="preserve">
+    <value>按 {0} 排序</value>
+  </data>
+  <data name="zh-Hant" xml:space="preserve">
+    <value>繁體中文</value>
+  </data>
+  <data name="zh-Hans" xml:space="preserve">
+    <value>简体中文（簡體中文）</value>
+  </data>
+  <data name="WriteConfigFileFailed" xml:space="preserve">
+    <value>寫入配置文件 {0} 失敗</value>
+  </data>
+  <data name="WindowSingle" xml:space="preserve">
+    <value>獨立視窗</value>
+  </data>
+  <data name="WindowHidden" xml:space="preserve">
+    <value>隱藏</value>
+  </data>
+  <data name="ViewMode9" xml:space="preserve">
+    <value>視圖模式9</value>
+  </data>
+  <data name="ViewMode4" xml:space="preserve">
+    <value>視圖模式4</value>
+  </data>
+  <data name="ViewMode2" xml:space="preserve">
+    <value>視圖模式2</value>
+  </data>
+  <data name="ViewMode1" xml:space="preserve">
+    <value>視圖模式1</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>版本</value>
+  </data>
+  <data name="UseSystem" xml:space="preserve">
+    <value>跟随系统</value>
+  </data>
+  <data name="UpdateLog4NetLevel" xml:space="preserve">
+    <value>更新Log4Net 日誌級別：</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>更新</value>
+  </data>
+  <data name="UnsupportedFileFormat" xml:space="preserve">
+    <value>不支持的文件格式</value>
+  </data>
+  <data name="TimeLeft" xml:space="preserve">
+    <value>剩餘時間：</value>
+  </data>
+  <data name="SortOptions" xml:space="preserve">
+    <value>排序選項</value>
+  </data>
+  <data name="SortDefault" xml:space="preserve">
+    <value>SortDefault</value>
+  </data>
+  <data name="SortByName" xml:space="preserve">
+    <value>按名稱排序</value>
+  </data>
+  <data name="SortByCategory" xml:space="preserve">
+    <value>按類別排序</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>Socket管理視窗</value>
+  </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>緩衝區大小</value>
+  </data>
+  <data name="SmartSortDescending" xml:space="preserve">
+    <value>智能排序 (降序)</value>
+  </data>
+  <data name="SmartSortAscending" xml:space="preserve">
+    <value>智能排序 (升序)</value>
+  </data>
+  <data name="SaveSingleConfigFailed" xml:space="preserve">
+    <value>保存單個配置 {0} 失敗</value>
+  </data>
+  <data name="ru" xml:space="preserve">
+    <value>Русский（俄語）</value>
+  </data>
+  <data name="RestoreConfigFileFailed" xml:space="preserve">
+    <value>恢復配置文件失敗</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>重置</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>重新命名</value>
+  </data>
+  <data name="RemStagePointsToTemp" xml:space="preserve">
+    <value>rem STAGE 指向臨時目錄中解壓出的 ColorVision 內容根</value>
+  </data>
+  <data name="RemRobocopySuccess" xml:space="preserve">
+    <value>  rem Robocopy 0-7 視為成功</value>
+  </data>
+  <data name="ProjectSolution_P" xml:space="preserve">
+    <value>項目/解決方案(P)...</value>
+  </data>
+  <data name="ProjectNotFound" xml:space="preserve">
+    <value>找不到項目{0}</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>插件名稱</value>
+  </data>
+  <data name="PluginMissingId" xml:space="preserve">
+    <value>插件 {0} 缺少唯一Id，已跳過</value>
+  </data>
+  <data name="PluginLoadError" xml:space="preserve">
+    <value>加載插件或manifest錯誤：{0}</value>
+  </data>
+  <data name="PluginDllNotFound" xml:space="preserve">
+    <value>插件DLL不存在: {0}</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>選項</value>
+  </data>
+  <data name="OpenLogFolder" xml:space="preserve">
+    <value>打開日誌資料夾</value>
+  </data>
+  <data name="OpenFolder" xml:space="preserve">
+    <value>打開文件夾</value>
+  </data>
+  <data name="OpenContainingFolder" xml:space="preserve">
+    <value>打開所在文件夾</value>
+  </data>
+  <data name="OpenConfigFile" xml:space="preserve">
+    <value>開啟設定檔</value>
+  </data>
+  <data name="OnlineCronGenerator" xml:space="preserve">
+    <value>在線Cron表達式生成器</value>
+  </data>
+  <data name="OK" xml:space="preserve">
+    <value>確定</value>
+  </data>
+  <data name="NoLocalLog4Output" xml:space="preserve">
+    <value>沒有配置本地的log4輸出</value>
+  </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>Mysql工具</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value>訊息日誌視窗</value>
+  </data>
+  <data name="MenuView" xml:space="preserve">
+    <value>視圖(_V)</value>
+  </data>
+  <data name="MenuUndo" xml:space="preserve">
+    <value>撤銷(_U)</value>
+  </data>
+  <data name="MenuTool" xml:space="preserve">
+    <value>工具(_T)</value>
+  </data>
+  <data name="MenuTemplate" xml:space="preserve">
+    <value>範本(_M)</value>
+  </data>
+  <data name="MenuRename" xml:space="preserve">
+    <value>重命名(_M)</value>
+  </data>
+  <data name="MenuRedo" xml:space="preserve">
+    <value>重新執行(_R)</value>
+  </data>
+  <data name="MenuPrint" xml:space="preserve">
+    <value>列印(_P)</value>
+  </data>
+  <data name="MenuPaste" xml:space="preserve">
+    <value>粘貼(P)</value>
+  </data>
+  <data name="MenuOptions" xml:space="preserve">
+    <value>選項(_O）</value>
+  </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>打开(_O)</value>
+  </data>
+  <data name="MenuNew" xml:space="preserve">
+    <value>新建(_N)</value>
+  </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>語言(_L）</value>
+  </data>
+  <data name="MenuHelp" xml:space="preserve">
+    <value>帮助(_H)</value>
+  </data>
+  <data name="MenuFile" xml:space="preserve">
+    <value>文件(_F)</value>
+  </data>
+  <data name="MenuExit" xml:space="preserve">
+    <value>退出(_X)</value>
+  </data>
+  <data name="MenuEdit" xml:space="preserve">
+    <value>編輯(_E)</value>
+  </data>
+  <data name="MenuDelete" xml:space="preserve">
+    <value>刪除(_D)</value>
+  </data>
+  <data name="MenuCut" xml:space="preserve">
+    <value>剪下(_T)</value>
+  </data>
+  <data name="MenuCopy" xml:space="preserve">
+    <value>複製(_C)</value>
+  </data>
+  <data name="MenuClose" xml:space="preserve">
+    <value>關閉(_C)</value>
+  </data>
+  <data name="MaxBackupCount" xml:space="preserve">
+    <value>最大備份數量</value>
+  </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>日誌等級</value>
+  </data>
+  <data name="Log" xml:space="preserve">
+    <value>紀錄</value>
+  </data>
+  <data name="LoadingPlugin" xml:space="preserve">
+    <value>加載插件: {0}</value>
+  </data>
+  <data name="LoadedPluginWithoutManifest" xml:space="preserve">
+    <value>加載了沒有manifest的插件: {0}</value>
+  </data>
+  <data name="LanguageResartSign" xml:space="preserve">
+    <value>您必須重新啟動才能使用新的語言設定</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>語言</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>한국어（韓語）</value>
+  </data>
+  <data name="ja" xml:space="preserve">
+    <value>日本語（日語）</value>
+  </data>
+  <data name="IsAutoSelect" xml:space="preserve">
+    <value>自動選擇嗎</value>
+  </data>
+  <data name="HotKeySet2" xml:space="preserve">
+    <value>點擊設置快捷鍵</value>
+  </data>
+  <data name="HotKeySet1" xml:space="preserve">
+    <value>按鍵盤設置快捷鍵</value>
+  </data>
+  <data name="HotKeys" xml:space="preserve">
+    <value>快捷鍵</value>
+  </data>
+  <data name="HotkeyNormal" xml:space="preserve">
+    <value>正常</value>
+  </data>
+  <data name="HotkeyConflict" xml:space="preserve">
+    <value>衝突</value>
+  </data>
+  <data name="GlobalMode" xml:space="preserve">
+    <value>全局</value>
+  </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>通用設定</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>一般</value>
+  </data>
+  <data name="fr" xml:space="preserve">
+    <value>Français（法語）</value>
+  </data>
+  <data name="FoundProjectDownloadConfirm" xml:space="preserve">
+    <value>找到項目{0}，{1}，是否下載</value>
+  </data>
+  <data name="FilterSupportsRegex" xml:space="preserve">
+    <value>過濾器支援正規</value>
+  </data>
+  <data name="ExeNameCannotBeEmpty" xml:space="preserve">
+    <value>exeName 不能為空</value>
+  </data>
+  <data name="Execute" xml:space="preserve">
+    <value>執行</value>
+  </data>
+  <data name="ErrorOccurred" xml:space="preserve">
+    <value>發生錯誤</value>
+  </data>
+  <data name="EnableScheduledBackup" xml:space="preserve">
+    <value>是否啟用定時備份</value>
+  </data>
+  <data name="EnableCUDA" xml:space="preserve">
+    <value>是否啟用CUDA</value>
+  </data>
+  <data name="en" xml:space="preserve">
+    <value>English（英語）</value>
+  </data>
+  <data name="EchoXCOPYFailed" xml:space="preserve">
+    <value>  echo XCOPY 複製失敗，更新中止。</value>
+  </data>
+  <data name="EchoUsingXCOPY" xml:space="preserve">
+    <value>echo 使用 XCOPY 回退複製...</value>
+  </data>
+  <data name="EchoUpdateComplete" xml:space="preserve">
+    <value>echo 更新完成。（清理在後台進行）</value>
+  </data>
+  <data name="EchoTerminatingProcess" xml:space="preserve">
+    <value>echo 正在結束進程: {0}</value>
+  </data>
+  <data name="EchoTargetDirNotExist" xml:space="preserve">
+    <value>  echo 目標目錄不存在，跳過備份。</value>
+  </data>
+  <data name="EchoStartCopyingFiles" xml:space="preserve">
+    <value>echo 開始複製新版本文件...</value>
+  </data>
+  <data name="EchoSchedulingCleanup" xml:space="preserve">
+    <value>echo 安排延遲清理臨時目錄與腳本...</value>
+  </data>
+  <data name="EchoRobocopyNotFound" xml:space="preserve">
+    <value>  echo 未找到 Robocopy，回退到 XCOPY...</value>
+  </data>
+  <data name="EchoRobocopyFailed" xml:space="preserve">
+    <value>     echo Robocopy 失敗，錯誤碼 !RC! ，嘗試使用 XCOPY 回退...</value>
+  </data>
+  <data name="EchoRestartingProgram" xml:space="preserve">
+    <value>echo 正在重新啟動程序...</value>
+  </data>
+  <data name="EchoCopyComplete" xml:space="preserve">
+    <value>echo 複製完成。</value>
+  </data>
+  <data name="EchoBackupTo" xml:space="preserve">
+    <value>  echo 備份到：%BKDIR%</value>
+  </data>
+  <data name="EchoBackupComplete" xml:space="preserve">
+    <value>  echo 備份完成。</value>
+  </data>
+  <data name="EchoBackingUpCurrentVersion" xml:space="preserve">
+    <value>echo 正在備份當前版本...</value>
+  </data>
+  <data name="DownLoadMySql" xml:space="preserve">
+    <value>下載MySql</value>
+  </data>
+  <data name="DownLoadMQTT" xml:space="preserve">
+    <value>下載MQTT</value>
+  </data>
+  <data name="Download" xml:space="preserve">
+    <value>下載</value>
+  </data>
+  <data name="Descending" xml:space="preserve">
+    <value>降序</value>
+  </data>
+  <data name="DependencyVersionInsufficient" xml:space="preserve">
+    <value>依賴 {0} 版本不足，要求: {1}，實際: {2}</value>
+  </data>
+  <data name="DependencyDllNotFound" xml:space="preserve">
+    <value>依賴 {0} 未找到對應的dll: {1}</value>
+  </data>
+  <data name="DependencyCheckException" xml:space="preserve">
+    <value>檢查依賴 {0} 版本時發生異常: {1}</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>刪除</value>
+  </data>
+  <data name="CurrentSpeed" xml:space="preserve">
+    <value>目前速度：</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>是否更新</value>
+  </data>
+  <data name="ConfirmDeletePlugin" xml:space="preserve">
+    <value>是否確認刪除插件{0}</value>
+  </data>
+  <data name="ConfigurationParameters" xml:space="preserve">
+    <value>配置相關參數</value>
+  </data>
+  <data name="ConfigFileRestored" xml:space="preserve">
+    <value>配置文件已從最近備份恢復</value>
+  </data>
+  <data name="ConfigFileResetDueToError" xml:space="preserve">
+    <value>配置文件異常,已經重置</value>
+  </data>
+  <data name="Close" xml:space="preserve">
+    <value>關閉</value>
+  </data>
+  <data name="Clear" xml:space="preserve">
+    <value>清除</value>
+  </data>
+  <data name="CleanupBackupFailed" xml:space="preserve">
+    <value>清理備份文件失敗</value>
+  </data>
+  <data name="CheckPluginUpdates" xml:space="preserve">
+    <value>檢測插件更新</value>
+  </data>
+  <data name="CheckingForAdditionalProjects" xml:space="preserve">
+    <value>正在檢索是否存在附加項目</value>
+  </data>
+  <data name="CheckingCUDASupport" xml:space="preserve">
+    <value>正在檢測是否支持CUDA</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>取消</value>
+  </data>
+  <data name="Bool2VisibilityConverterNotFound" xml:space="preserve">
+    <value>bool2VisibilityConverter 資源未找到</value>
+  </data>
+  <data name="BatchFilePathCannotBeEmpty" xml:space="preserve">
+    <value>batchFilePath 不能為空</value>
+  </data>
+  <data name="BaseDirCannotBeEmpty" xml:space="preserve">
+    <value>baseDir 不能為空</value>
+  </data>
+  <data name="BackupConfigFileFailed" xml:space="preserve">
+    <value>備份配置文件失敗</value>
+  </data>
+  <data name="AutoSwitchSelectedView" xml:space="preserve">
+    <value>自動切換選取視圖</value>
+  </data>
+  <data name="AutoScrollToEnd" xml:space="preserve">
+    <value>自動滾動到底部</value>
+  </data>
+  <data name="AutoRefresh" xml:space="preserve">
+    <value>自動重新整理</value>
+  </data>
+  <data name="AutoCleanOldBackups" xml:space="preserve">
+    <value>超過則自動清理舊備份</value>
+  </data>
+  <data name="AutoAdjustColumnWidth" xml:space="preserve">
+    <value>自動調整列寬</value>
+  </data>
+  <data name="Ascending" xml:space="preserve">
+    <value>升序</value>
+  </data>
+  <data name="ApplicationCurrentNotInitialized" xml:space="preserve">
+    <value>Application.Current 未初始化</value>
+  </data>
+  <data name="AllFiles" xml:space="preserve">
+    <value>所有文件 (*.*)|*.*</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>載入</value>
+  </data>
 </root>
