--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -288,4 +288,7 @@
   <data name="RollbackRequiresUninstallThenInstallOrRerunPackage" xml:space="preserve">
     <value>ソフトウェアをロールバックするには、まずソフトウェアをアンインストールしてから再インストールするか、インストール後にパッケージを再インストールする必要があります。</value>
   </data>
+  <data name="FullScreen" xml:space="preserve">
+    <value>全画面表示</value>
+  </data>
 </root>
