--- a/ColorVision/Properties/Resources.zh-hant.resx
+++ b/ColorVision/Properties/Resources.zh-hant.resx
@@ -288,4 +288,7 @@
   <data name="RollbackRequiresUninstallThenInstallOrRerunPackage" xml:space="preserve">
     <value>回退軟體需要先卸載在安裝，或是安裝後重新執行安裝包；</value>
   </data>
+  <data name="FullScreen" xml:space="preserve">
+    <value>全螢幕</value>
+  </data>
 </root>
