--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1915,7 +1915,7 @@
     <value>振幅ファイル</value>
   </data>
   <data name="IsEnableNd" xml:space="preserve">
-    <value>ND を有効にしますか?</value>
+    <value>ND を有効にしますか</value>
   </data>
   <data name="ConnectType" xml:space="preserve">
     <value>接続方法</value>
@@ -2534,5 +2534,23 @@
   </data>
   <data name="Online" xml:space="preserve">
     <value>オンライン</value>
+  </data>
+  <data name="Syncfreq" xml:space="preserve">
+    <value>同期周波数</value>
+  </data>
+  <data name="SyncfreqFactor" xml:space="preserve">
+    <value>同期周波数</value>
+  </data>
+  <data name="FilterBW" xml:space="preserve">
+    <value>フィルターBW</value>
+  </data>
+  <data name="IsSyncFrequencyEnabled" xml:space="preserve">
+    <value>同期頻度が有効</value>
+  </data>
+  <data name="GetSpectrSerialNumber" xml:space="preserve">
+    <value>スペクトラムシリアル番号の取得</value>
+  </data>
+  <data name="EditDisplayConfig" xml:space="preserve">
+    <value>ディスプレイ設定の編集</value>
   </data>
 </root>
