--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1915,7 +1915,7 @@
     <value>Файл амплитуды</value>
   </data>
   <data name="IsEnableNd" xml:space="preserve">
-    <value>Включить ND?</value>
+    <value>Включить ND</value>
   </data>
   <data name="ConnectType" xml:space="preserve">
     <value>Способ подключения</value>
@@ -2534,5 +2534,23 @@
   </data>
   <data name="Online" xml:space="preserve">
     <value>Онлайн</value>
+  </data>
+  <data name="Syncfreq" xml:space="preserve">
+    <value>Синхронная частота</value>
+  </data>
+  <data name="SyncfreqFactor" xml:space="preserve">
+    <value>Синхронная частота</value>
+  </data>
+  <data name="FilterBW" xml:space="preserve">
+    <value>FilterBW</value>
+  </data>
+  <data name="IsSyncFrequencyEnabled" xml:space="preserve">
+    <value>IsSyncFrequencyEnabled</value>
+  </data>
+  <data name="GetSpectrSerialNumber" xml:space="preserve">
+    <value>GetSpectrSerialNumber</value>
+  </data>
+  <data name="EditDisplayConfig" xml:space="preserve">
+    <value>EditDisplayConfig</value>
   </data>
 </root>
