--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2553,4 +2553,16 @@
   <data name="EditDisplayConfig" xml:space="preserve">
     <value>EditDisplayConfig</value>
   </data>
+  <data name="OpenEditTool" xml:space="preserve">
+    <value>Editing tools</value>
+  </data>
+  <data name="Annotation" xml:space="preserve">
+    <value>Notes</value>
+  </data>
+  <data name="PropertyEdit" xml:space="preserve">
+    <value>Attribute Editing</value>
+  </data>
+  <data name="TextEdit" xml:space="preserve">
+    <value>Text editing</value>
+  </data>
 </root>
