--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1642,7 +1642,7 @@
     <value>Левый</value>
   </data>
   <data name="Right" xml:space="preserve">
-    <value>верно:</value>
+    <value>верно</value>
   </data>
   <data name="Dispaly" xml:space="preserve">
     <value>показывать</value>
@@ -1756,7 +1756,7 @@
     <value>Кривая тока</value>
   </data>
   <data name="ElectricCurrent" xml:space="preserve">
-    <value>Ток (А)</value>
+    <value>Ток (mА)</value>
   </data>
   <data name="Voltage" xml:space="preserve">
     <value>Напряжение (В)</value>
@@ -2379,9 +2379,6 @@
   <data name="ClearDatabaseOnly" xml:space="preserve">
     <value>Очистить только базу данных</value>
   </data>
-  <data name="ConfigArchivedModel_删除本地文件" xml:space="preserve">
-    <value>Удалить локальные файлы</value>
-  </data>
   <data name="DeleteLocalFiles" xml:space="preserve">
     <value>Удалить локальные файлы</value>
   </data>
@@ -2564,5 +2561,14 @@
   </data>
   <data name="TextEdit" xml:space="preserve">
     <value>Редактирование текста</value>
+  </data>
+  <data name="PreprocessManager" xml:space="preserve">
+    <value>Управление предварительной обработкой</value>
+  </data>
+  <data name="CurrentVoltageV" xml:space="preserve">
+    <value>Текущее напряжение (В)</value>
+  </data>
+  <data name="CurrentCurrentMA" xml:space="preserve">
+    <value>Ток (мА)</value>
   </data>
 </root>
